[gd_scene load_steps=14 format=2]

[ext_resource path="res://_glb/entities/dswitch.glb" type="PackedScene" id=1]
[ext_resource path="res://material/env/copper_corroded1.png" type="Texture" id=2]
[ext_resource path="res://entities/control/damage_trigger.gd" type="Script" id=3]
[ext_resource path="res://entities/control/dswitch.gd" type="Script" id=4]
[ext_resource path="res://audio/weapons/target_clang.wav" type="AudioStream" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.404358, 1, 0.20406 )

[sub_resource type="ConcavePolygonShape" id=9]
data = PoolVector3Array( -0.4769, 0, -0.7588, -0.4183, 0.1199, -1, -0.4183, 0.1199, -0.6656, -0.4769, 0, -0.7588, -0.4769, 0, -1.1401, -0.4183, 0.1199, -1, 0, 0, -1.1401, 0.4183, 0.1199, -1, 0, 0.1199, -1, 0, 0, -1.1401, 0.4769, 0, -1.1401, 0.4183, 0.1199, -1, 0.4769, 0, 0.7588, 0.4183, 0.1199, 1, 0.4183, 0.1199, 0.6656, 0.4769, 0, 0.7588, 0.4769, 0, 1.1401, 0.4183, 0.1199, 1, -0.2385, 0, 1.1401, -0.4183, 0.1199, 1, -0.2092, 0.1199, 1, -0.2385, 0, 1.1401, -0.4769, 0, 1.1401, -0.4183, 0.1199, 1, 0.4769, -0.1199, -0.7588, 0.4047, -0.1199, 0.7177, 0.4769, -0.1199, 0.7588, 0.4769, -0.1199, -0.7588, 0.4047, -0.1199, -0.7177, 0.4047, -0.1199, 0.7177, -0.2092, 0.1199, 0.6656, -0.4183, 0.1199, 1, -0.4183, 0.1199, 0.6656, -0.2092, 0.1199, 0.6656, -0.2092, 0.1199, 1, -0.4183, 0.1199, 1, -0.2385, -0.1199, 1.1401, -0.4769, 0, 1.1401, -0.2385, 0, 1.1401, -0.2385, -0.1199, 1.1401, -0.4769, -0.1199, 1.1401, -0.4769, 0, 1.1401, 0.4769, -0.1199, 0.7588, 0.4769, 0, 1.1401, 0.4769, 0, 0.7588, 0.4769, -0.1199, 0.7588, 0.4769, -0.1199, 1.1401, 0.4769, 0, 1.1401, 0, -0.1199, -1.1401, 0.4769, 0, -1.1401, 0, 0, -1.1401, 0, -0.1199, -1.1401, 0.4769, -0.1199, -1.1401, 0.4769, 0, -1.1401, -0.4769, -0.1199, -0.7588, -0.4769, 0, -1.1401, -0.4769, 0, -0.7588, -0.4769, -0.1199, -0.7588, -0.4769, -0.1199, -1.1401, -0.4769, 0, -1.1401, -0.2385, -0.1199, -1.1401, 0, 0, -1.1401, -0.2385, 0, -1.1401, -0.2385, -0.1199, -1.1401, 0, -0.1199, -1.1401, 0, 0, -1.1401, 0.4769, -0.1199, 1.1401, 0, 0, 1.1401, 0.4769, 0, 1.1401, 0.4769, -0.1199, 1.1401, 0, -0.1199, 1.1401, 0, 0, 1.1401, 0.4183, 0.1199, 0.6656, 0, 0.1199, 1, 0, 0.1199, 0.6656, 0.4183, 0.1199, 0.6656, 0.4183, 0.1199, 1, 0, 0.1199, 1, -0.4769, -0.1199, 0.7588, -0.4208, -0.1199, -0.7177, -0.4769, -0.1199, -0.7588, -0.4769, -0.1199, 0.7588, -0.4208, -0.1199, 0.7177, -0.4208, -0.1199, -0.7177, 0.4769, 0, 1.1401, 0, 0.1199, 1, 0.4183, 0.1199, 1, 0.4769, 0, 1.1401, 0, 0, 1.1401, 0, 0.1199, 1, -0.2385, 0, -1.1401, 0, 0.1199, -1, -0.2092, 0.1199, -1, -0.2385, 0, -1.1401, 0, 0, -1.1401, 0, 0.1199, -1, -0.4769, 0, -1.1401, -0.2092, 0.1199, -1, -0.4183, 0.1199, -1, -0.4769, 0, -1.1401, -0.2385, 0, -1.1401, -0.2092, 0.1199, -1, -0.4769, -0.1199, -1.1401, -0.2144, -0.1199, -1.0783, -0.2385, -0.1199, -1.1401, -0.4769, -0.1199, -1.1401, -0.4208, -0.1199, -1.0783, -0.2144, -0.1199, -1.0783, -0.4769, -0.1199, -1.1401, -0.2385, 0, -1.1401, -0.4769, 0, -1.1401, -0.4769, -0.1199, -1.1401, -0.2385, -0.1199, -1.1401, -0.2385, 0, -1.1401, 0, -0.1199, 1.1401, -0.2385, 0, 1.1401, 0, 0, 1.1401, 0, -0.1199, 1.1401, -0.2385, -0.1199, 1.1401, -0.2385, 0, 1.1401, 0, 0.1199, 0.6656, -0.2092, 0.1199, 1, -0.2092, 0.1199, 0.6656, 0, 0.1199, 0.6656, 0, 0.1199, 1, -0.2092, 0.1199, 1, 0, 0, 1.1401, -0.2092, 0.1199, 1, 0, 0.1199, 1, 0, 0, 1.1401, -0.2385, 0, 1.1401, -0.2092, 0.1199, 1, 0, 0.1199, -1, -0.2092, 0.1199, -0.6656, -0.2092, 0.1199, -1, 0, 0.1199, -1, 0, 0.1199, -0.6656, -0.2092, 0.1199, -0.6656, -0.2102, 0.1074, 0.6706, -0.0059, 0.0473, 0.6949, -0.001, 0.1074, 0.6706, -0.2102, 0.1074, 0.6706, -0.215, 0.0473, 0.6949, -0.0059, 0.0473, 0.6949, 0.4769, -0.1199, 0.7588, 0.4047, -0.1199, 1.0783, 0.4769, -0.1199, 1.1401, 0.4769, -0.1199, 0.7588, 0.4047, -0.1199, 0.7177, 0.4047, -0.1199, 1.0783, 0.4769, -0.1199, -1.1401, 0.4047, -0.1199, -0.7177, 0.4769, -0.1199, -0.7588, 0.4769, -0.1199, -1.1401, 0.4047, -0.1199, -1.0783, 0.4047, -0.1199, -0.7177, -0.4769, -0.1199, 1.1401, -0.4208, -0.1199, 0.7177, -0.4769, -0.1199, 0.7588, -0.4769, -0.1199, 1.1401, -0.4208, -0.1199, 1.0783, -0.4208, -0.1199, 0.7177, -0.4769, -0.1199, -0.7588, -0.4208, -0.1199, -1.0783, -0.4769, -0.1199, -1.1401, -0.4769, -0.1199, -0.7588, -0.4208, -0.1199, -0.7177, -0.4208, -0.1199, -1.0783, 0.4183, 0.1199, -1, 0, 0.1199, -0.6656, 0, 0.1199, -1, 0.4183, 0.1199, -1, 0.4183, 0.1199, -0.6656, 0, 0.1199, -0.6656, 0.4183, 0.1199, -0.6656, 0, 0.1199, 0.6656, 0, 0.1199, -0.6656, 0.4183, 0.1199, -0.6656, 0.4183, 0.1199, 0.6656, 0, 0.1199, 0.6656, -0.4769, -0.1199, 1.1401, -0.4769, 0, 0.7588, -0.4769, 0, 1.1401, -0.4769, -0.1199, 1.1401, -0.4769, -0.1199, 0.7588, -0.4769, 0, 0.7588, -0.4769, -0.1199, 0.7588, -0.4769, 0, -0.7588, -0.4769, 0, 0.7588, -0.4769, -0.1199, 0.7588, -0.4769, -0.1199, -0.7588, -0.4769, 0, -0.7588, 0.4769, -0.1199, -1.1401, 0.4769, 0, -0.7588, 0.4769, 0, -1.1401, 0.4769, -0.1199, -1.1401, 0.4769, -0.1199, -0.7588, 0.4769, 0, -0.7588, 0.4769, -0.1199, -0.7588, 0.4769, 0, 0.7588, 0.4769, 0, -0.7588, 0.4769, -0.1199, -0.7588, 0.4769, -0.1199, 0.7588, 0.4769, 0, 0.7588, -0.2092, 0.1199, -1, -0.4183, 0.1199, -0.6656, -0.4183, 0.1199, -1, -0.2092, 0.1199, -1, -0.2092, 0.1199, -0.6656, -0.4183, 0.1199, -0.6656, -0.2092, 0.1199, -0.6656, -0.4183, 0.1199, 0.6656, -0.4183, 0.1199, -0.6656, -0.2092, 0.1199, -0.6656, -0.2092, 0.1199, 0.6656, -0.4183, 0.1199, 0.6656, 0.4769, -0.1199, 1.1401, -0.008, -0.1199, 1.0783, 0, -0.1199, 1.1401, 0.4769, -0.1199, 1.1401, 0.4047, -0.1199, 1.0783, -0.008, -0.1199, 1.0783, 0, -0.1199, -1.1401, 0.4047, -0.1199, -1.0783, 0.4769, -0.1199, -1.1401, 0, -0.1199, -1.1401, -0.008, -0.1199, -1.0783, 0.4047, -0.1199, -1.0783, 0.4769, 0, -1.1401, 0.4183, 0.1199, -0.6656, 0.4183, 0.1199, -1, 0.4769, 0, -1.1401, 0.4769, 0, -0.7588, 0.4183, 0.1199, -0.6656, 0.4769, 0, -0.7588, 0.4183, 0.1199, 0.6656, 0.4183, 0.1199, -0.6656, 0.4769, 0, -0.7588, 0.4769, 0, 0.7588, 0.4183, 0.1199, 0.6656, -0.4769, 0, 1.1401, -0.4183, 0.1199, 0.6656, -0.4183, 0.1199, 1, -0.4769, 0, 1.1401, -0.4769, 0, 0.7588, -0.4183, 0.1199, 0.6656, -0.4769, 0, 0.7588, -0.4183, 0.1199, -0.6656, -0.4183, 0.1199, 0.6656, -0.4769, 0, 0.7588, -0.4769, 0, -0.7588, -0.4183, 0.1199, -0.6656, -0.0059, 0.0473, -0.6362, -0.215, 0.0473, 0.6949, -0.215, 0.0473, -0.6362, -0.0059, 0.0473, -0.6362, -0.0059, 0.0473, 0.6949, -0.215, 0.0473, 0.6949, -0.2102, 0.1074, -0.6605, -0.215, 0.0473, 0.6949, -0.2102, 0.1074, 0.6706, -0.2102, 0.1074, -0.6605, -0.215, 0.0473, -0.6362, -0.215, 0.0473, 0.6949, -0.001, 0.1074, 0.6706, -0.0059, 0.0473, -0.6362, -0.001, 0.1074, -0.6605, -0.001, 0.1074, 0.6706, -0.0059, 0.0473, 0.6949, -0.0059, 0.0473, -0.6362, -0.001, 0.1074, -0.6605, -0.215, 0.0473, -0.6362, -0.2102, 0.1074, -0.6605, -0.001, 0.1074, -0.6605, -0.0059, 0.0473, -0.6362, -0.215, 0.0473, -0.6362, 0, 0.1199, -0.6656, -0.2102, 0.1074, -0.6605, -0.2092, 0.1199, -0.6656, 0, 0.1199, -0.6656, -0.001, 0.1074, -0.6605, -0.2102, 0.1074, -0.6605, 0, 0.1199, 0.6656, -0.001, 0.1074, -0.6605, 0, 0.1199, -0.6656, 0, 0.1199, 0.6656, -0.001, 0.1074, 0.6706, -0.001, 0.1074, -0.6605, -0.2092, 0.1199, -0.6656, -0.2102, 0.1074, 0.6706, -0.2092, 0.1199, 0.6656, -0.2092, 0.1199, -0.6656, -0.2102, 0.1074, -0.6605, -0.2102, 0.1074, 0.6706, -0.2092, 0.1199, 0.6656, -0.001, 0.1074, 0.6706, 0, 0.1199, 0.6656, -0.2092, 0.1199, 0.6656, -0.2102, 0.1074, 0.6706, -0.001, 0.1074, 0.6706, -0.008, -0.1199, 0.7177, 0.4047, -0.1199, 1.0783, 0.4047, -0.1199, 0.7177, -0.008, -0.1199, 0.7177, -0.008, -0.1199, 1.0783, 0.4047, -0.1199, 1.0783, -0.2144, -0.1199, 0.7177, -0.008, -0.1199, 1.0783, -0.008, -0.1199, 0.7177, -0.2144, -0.1199, 0.7177, -0.2144, -0.1199, 1.0783, -0.008, -0.1199, 1.0783, -0.4208, -0.1199, 0.7177, -0.2144, -0.1199, 1.0783, -0.2144, -0.1199, 0.7177, -0.4208, -0.1199, 0.7177, -0.4208, -0.1199, 1.0783, -0.2144, -0.1199, 1.0783, -0.4208, -0.1199, -1.0783, -0.2144, -0.1199, -0.7177, -0.2144, -0.1199, -1.0783, -0.4208, -0.1199, -1.0783, -0.4208, -0.1199, -0.7177, -0.2144, -0.1199, -0.7177, -0.4208, -0.1199, -0.7177, -0.2144, -0.1199, 0.7177, -0.2144, -0.1199, -0.7177, -0.4208, -0.1199, -0.7177, -0.4208, -0.1199, 0.7177, -0.2144, -0.1199, 0.7177, -0.2144, -0.1199, -1.0783, -0.008, -0.1199, -0.7177, -0.008, -0.1199, -1.0783, -0.2144, -0.1199, -1.0783, -0.2144, -0.1199, -0.7177, -0.008, -0.1199, -0.7177, -0.2144, -0.1199, -0.7177, -0.008, -0.1199, 0.7177, -0.008, -0.1199, -0.7177, -0.2144, -0.1199, -0.7177, -0.2144, -0.1199, 0.7177, -0.008, -0.1199, 0.7177, -0.008, -0.1199, -1.0783, 0.4047, -0.1199, -0.7177, 0.4047, -0.1199, -1.0783, -0.008, -0.1199, -1.0783, -0.008, -0.1199, -0.7177, 0.4047, -0.1199, -0.7177, -0.008, -0.1199, -0.7177, 0.4047, -0.1199, 0.7177, 0.4047, -0.1199, -0.7177, -0.008, -0.1199, -0.7177, -0.008, -0.1199, 0.7177, 0.4047, -0.1199, 0.7177, -0.2385, -0.1199, -1.1401, -0.008, -0.1199, -1.0783, 0, -0.1199, -1.1401, -0.2385, -0.1199, -1.1401, -0.2144, -0.1199, -1.0783, -0.008, -0.1199, -1.0783, 0, -0.1199, 1.1401, -0.2144, -0.1199, 1.0783, -0.2385, -0.1199, 1.1401, 0, -0.1199, 1.1401, -0.008, -0.1199, 1.0783, -0.2144, -0.1199, 1.0783, -0.2385, -0.1199, 1.1401, -0.4208, -0.1199, 1.0783, -0.4769, -0.1199, 1.1401, -0.2385, -0.1199, 1.1401, -0.2144, -0.1199, 1.0783, -0.4208, -0.1199, 1.0783 )

[sub_resource type="Animation" id=8]
resource_name = "AlreadyOff"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("base/lever:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -57.958, 0, 0 ), Vector3( -69.948, 0, 0 ), Vector3( -57.958, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "AlreadyOn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("base/lever:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 59.86, 0, 0 ), Vector3( 75, 0, 0 ), Vector3( 59.86, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("base/lever:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -66.833, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "SwitchOff"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("base/lever:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 59.86, 0, 0 ), Vector3( -75.574, 0, 0 ), Vector3( -57.958, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SwitchOn"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("base/lever:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -66.833, 0, 0 ), Vector3( 75.356, 0, 0 ), Vector3( 59.86, 0, 0 ) ]
}

[node name="dswitch" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="0"]
stream = ExtResource( 5 )
unit_size = 20.0

[node name="base" parent="." index="1"]
material/0 = SubResource( 1 )

[node name="lever" parent="base" index="0"]
transform = Transform( 1, 0, 0, 0, 0.393412, 0.919362, 0, -0.919362, 0.393412, 0, 0, 0 )
material/0 = SubResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="base/lever" index="0" groups=["target"]]
collision_layer = 5
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="base/lever/KinematicBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, -0.100727, 1, -0.0535288 )
shape = SubResource( 2 )

[node name="target_ref" type="Spatial" parent="base/lever/KinematicBody" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, -0.128579, 1.66331, -0.0732296 )

[node name="StaticBody" type="StaticBody" parent="base" index="1"]

[node name="CollisionShape" type="CollisionShape" parent="base/StaticBody" index="0"]
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/AlreadyOff = SubResource( 8 )
anims/AlreadyOn = SubResource( 6 )
anims/RESET = SubResource( 4 )
anims/SwitchOff = SubResource( 7 )
anims/SwitchOn = SubResource( 5 )

[node name="deactivate_timer" type="Timer" parent="." index="3"]
one_shot = true

[connection signal="damage_params" from="base/lever/KinematicBody" to="." method="_on_damaged"]
[connection signal="timeout" from="deactivate_timer" to="." method="_on_deactivate_timer_timeout"]
